# nvidia

./: .env  README.md  dev.sh  docker-compose.yml  pyproject.toml
allan/: chamada_api.py
allan/exemplo_1_sonnet/: agents.py  crew_main.py  examples.py  llm_config.py  quick_demo.py  requirements.txt  simple_working_example.py  tasks.py  test_setup.py
allan/exemplo_2_gwen/: agents_task.py  crew.py  promp_etapas.txt  prompt_agentes.md
allan/exemplo_3/flask_app/: app.py  install.sh  requirements.txt
allan/exemplo_3/flask_app/agents/: agent.py  crew_main.py  llm_config.py  tasks.py
allan/exemplo_3/flask_app/agents/input/: recon_raw_output.txt
allan/exemplo_3/flask_app/agents/outputs/: pentest_report.md  structured_analysis.json
allan/exemplo_3/flask_app/agents/outputs/report_sections/: infra_findings.md  network_findings.md  (+1 more)
allan/exemplo_3/flask_app/static/css/: style.css
allan/exemplo_3/flask_app/static/js/: main.js
allan/exemplo_3/flask_app/templates/: index.html  results.html
allan/exemplo_3/flask_app/uploads/04addef1-533a-45a4-9723-94b8de2da9c7/: recon_raw_output.txt
allan_2/: LICENSE  QUICK_START.md  install.sh  test_parsers.py  utils.py
allan_2/examples/: nessus_sample.xml
backend/: .env  Dockerfile  main.py  pyproject.toml
backend/routes/: report_routes.py  scan_routes.py
backend/schemas/: report.py  scan.py  submission.py
backend/services/: rabbitmq_service.py  scan_service.py
frontend/: Dockerfile
frontend/src/: package-lock.json  package.json  security-analysis.tsx
frontend/src/app/: page.tsx
frontend/src/app/page2/: page.tsx
